--- a/install
+++ b/install
@@ -15,6 +15,7 @@ git submodule update --init --recursive "${DOTBOT_DIR}"
 "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
 
 read -p "install prerequisites? (y/N)" -n 1 -r
+echo
 if [[ $REPLY =~ ^[Yy]$ ]]
 then
     ./config/prerequisites
